--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,33 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr = np.random.permutation(arr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 70  80  90]\n",
-      " [ 10  20  30]\n",
-      " [ 40  50  60]\n",
-      " [100 110 120]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[70, 80, 90]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(arr)"
+    "arr[arr[:, 0] == 70]"
    ]
   }
  ],
