--- a/covid-analysis-notebook.ipynb
+++ b/covid-analysis-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,7 @@
    ],
    "source": [
     "import sys\n",
+    "import os\n",
     "import pandas as pb\n",
     "import datetime\n",
     "import numpy as np\n",
@@ -70,8 +71,9 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression, RidgeCV, MultiTaskLassoCV, ElasticNetCV, MultiTaskElasticNetCV\n",
     "from pandas.plotting import register_matplotlib_converters\n",
+    "dir_path = os.getcwd()\n",
     "register_matplotlib_converters()\n",
-    "data = pb.read_csv(\"C:\\\\Users\\\\Windows10\\\\Desktop\\\\Machine Learning\\\\Covid Analysis\\\\covid_india_data.csv\")\n",
+    "data = pb.read_csv(\"{}\\\\covid_india_data.csv\".format(dir_path))\n",
     "print(data.head(10))"
    ]
   },
@@ -338,7 +340,7 @@
     }
    ],
    "source": [
-    "predict_data = pb.read_csv(\"C:\\\\Users\\\\Windows10\\\\Desktop\\\\Machine Learning\\\\Covid Analysis\\\\prediction_data.csv\")\n",
+    "predict_data = pb.read_csv(\"{}\\\\prediction_data.csv\".format(di))\n",
     "print(predict_data.head(5))\n",
     "\n",
     "predict_data = predict_data.to_numpy()"
