--- a/covid-analysis-notebook.ipynb
+++ b/covid-analysis-notebook.ipynb
@@ -1,8 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Covid-19 Analysis India\n",
+    "\n",
+    "As we all know, the Novel Coronavirus, SARS-CoV-2, has been the cause of a global pandemic, causing most of the world to shut down and adversely affecting the economies of various countries. India has been one such country where covid-19 cases have been spreading rapidly, with barely any signs of slowing down. \n",
+    "\n",
+    "This project attempts to find the trend in rise of covid-19 cases in different states of India using Regression Analysis. We will be analyzing India's covid-19 data and using various Machine Learning techniques, we will be training models to predict new data. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset\n",
+    "\n",
+    "[COVID-19 in India: Dataset on Novel Corona Virus Disease 2019 in India](https://www.kaggle.com/sudalairajkumar/covid19-in-india/activity)\n",
+    "\n",
+    "Source: https://www.mohfw.gov.in/\n",
+    "\n",
+    "The dataset we are using is a slightly modified version of the cited dataset. It contains the total number of positive, cured, death and active cases for each state from the genesis until 17-09-2020. It also contains the corresponding populations and population densities for each state. Moreover, it also contains the number of positive, cured and death cases registered on each particular day, in each state. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Libraries used\n",
+    "\n",
+    "* sys: Used to manipulate the output to stdout\n",
+    "* os: Used to obtain pwd\n",
+    "* pandas 1.1.1: Used to read and handle the dataset\n",
+    "* datetime: Used to format dates\n",
+    "* numpy 1.19.1: Used to handle arrays \n",
+    "* matplotlib 3.3.1: Used to visualize the data\n",
+    "* sklearn 0.23.2: Used to perform machine learning techniques on the data\n",
+    " "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +107,6 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "import sklearn\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression, RidgeCV, MultiTaskLassoCV, ElasticNetCV, MultiTaskElasticNetCV\n",
     "from pandas.plotting import register_matplotlib_converters\n",
@@ -75,6 +114,15 @@
     "register_matplotlib_converters()\n",
     "data = pb.read_csv(\"{}\\\\covid_india_data.csv\".format(dir_path))\n",
     "print(data.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing\n",
+    "\n",
+    "We first convert the DataFrame into a numpy array. We also format the dates in the DataFrame."
    ]
   },
   {
@@ -88,8 +136,16 @@
     "dates = []\n",
     "for i in range(0,6286):\n",
     "    dates.append(datetime.datetime.strptime(dat[i, 1], \"%d/%m/%y\"))\n",
-    "#     print(dates[-1].date())\n",
     "dates = matplotlib.dates.date2num(dates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization\n",
+    "\n",
+    "Here, we have visualized the rise in cases in two selected states which have similar populations, but with varying population densities, to highlight the effect population density has on rise in cases."
    ]
   },
   {
@@ -151,6 +207,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we have visualized the rise in cases in two selected states which have similar population densities, but with varying populations, to highlight the effect population has on rise in cases. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -207,25 +270,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "alphaset = [3e-12, 1e-11, 3e-11, 1e-10, 3e-10, 1e-9, 3e-9, 1e-8, 3e-8, 1e-7, 3e-7, 1e-6, 3e-6, 1e-5, 3e-5, 1e-4, 3e-4, 1e-3, 3e-3, 0.01, 0.03, 0.1, 0.3, 1, 3, 10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "linearscores = []\n",
-    "ridgescores = []\n",
-    "lassoscores = []\n",
-    "elasticscores = []\n",
-    "alphaset = [3e-12, 1e-11, 3e-11, 1e-10, 3e-10, 1e-9, 3e-9, 1e-8, 3e-8]"
+    "## Modelling \n",
+    "\n",
+    "We use different machine learning models to fit the data and determine which model fits the data best. We use the R^2 score as a single valued evaluation metric to compare the different models. \n",
+    "\n",
+    "### Features\n",
+    "\n",
+    "We use the following features upto the fourth power, after normalization.\n",
+    "\n",
+    "* Active cases\n",
+    "* Population Density\n",
+    "* Urban Population\n",
+    "* Rural Population\n",
+    "\n",
+    "### Targets\n",
+    "\n",
+    "We use the features to fit the following target variables - \n",
+    "\n",
+    "* New Confirmed Cases\n",
+    "* New Cured Cases\n",
+    "* New Death Cases\n",
+    "\n",
+    "### Preprocessing \n",
+    "\n",
+    "We randomly split the dataset on an 80:20 ratio into the training and testing datasets and transform the four features into all the polynomial features upto the fourth degree.\n",
+    "\n",
+    "### Models used \n",
+    "\n",
+    "* Linear Regression\n",
+    "* Ridge Regression(Linear Regression with L2 regularization)\n",
+    "* LASSO Regression(Linear Regression with L1 regularization)\n",
+    "* Elastic Net Regression(Linear Regression with both L1 and L2 regularization)\n",
+    "\n",
+    "We randomly split the dataset, fit each model and score it against the testing dataset ten times and compare the average of these scores to determine which model fits the dataset best.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -245,6 +328,12 @@
     }
    ],
    "source": [
+    "linearscores = []\n",
+    "ridgescores = []\n",
+    "lassoscores = []\n",
+    "elasticscores = []\n",
+    "alphaset = [3e-12, 1e-11, 3e-11, 1e-10, 3e-10, 1e-9, 3e-9, 1e-8, 3e-8]\n",
+    "\n",
     "for i in range(0,10):\n",
     "    sys.stdout.write(\"\\rIteration %i\" % i)\n",
     "    sys.stdout.flush()\n",
@@ -270,6 +359,13 @@
     "print(\"Ridge Regression Average Score = \", ridgeavgscore)\n",
     "print(\"Lasso Regression Average Score = \", lassoavgscore)\n",
     "print(\"Elastic Net Regression Average Score = \", elasticavgscore)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As both Linear and Ridge Regressions have very similar scores, we iterate over them a hundred times to obtain a more generalized average."
    ]
   },
   {
@@ -303,6 +399,18 @@
     "    ridgescores.append(ridgereg.score(X_test, Y_test))\n",
     "print(\"\\rLinear Regression Average Score = \", np.mean(linearscores))\n",
     "print(\"Ridge Regression Average Score = \", np.mean(ridgescores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ridge Regression has a better score overall, so we use it to fit our data.\n",
+    "\n",
+    "## Prediction\n",
+    "\n",
+    "We use the data from 17-09-2020 which is seperately stored in another file.\n",
+    "\n"
    ]
   },
   {
@@ -347,6 +455,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Firstly we use the selected model to fit the entire dataset.\n",
+    "We use this model to predict the cases for a selected state on 17-09-2020. Here, we have chosen Delhi. Consequently, we use the predicted data to determine the features of the next day. We repeat the process to predict the trend for 30 days. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -362,6 +478,13 @@
     "    X_for_prediction = PolynomialFeatures(4).fit_transform(latest_data)\n",
     "    predicted = np.append(predicted, final_model.predict(X_for_prediction), axis = 0)\n",
     "    dates_future = np.append(dates_future, dates_future[-1] + 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We visualize the predicted data along with the true data to gain insight about the trend that the curve is going to have for the next thirty days."
    ]
   },
   {
@@ -398,6 +521,17 @@
     "plt.legend(loc = \"upper left\", prop={'size': 15})\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion \n",
+    "\n",
+    "We have found that for the next thirty days after 17-09-2020 there is actually a slight drop in the new cases. But, as with any other dataset which uses the most recent values for prediction (eg:weather prediction), the prediction becomes less reliable, the further into the future we try to predict. \n",
+    "\n",
+    "Please stay safe, stay home, wear masks, and maintain social distancing! "
+   ]
   }
  ],
  "metadata": {
@@ -416,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
